new main testing